# vvenc

./: .gitattributes  .gitignore  .gitlab-ci-internal.yml  .gitlab-ci.yml  .gitmodules  AUTHORS.md  CMakeLists.txt  COPYING  LICENSE.txt  Makefile  README.md  RitualDance.266  RitualDance2.266  changelog.txt  logo.json  out.266
.github/workflows/: Build.yml  build_linux.yaml  build_mac.yaml  build_windows.yaml
cfg/: MarketPlace.cfg  frc.cfg  gop32.cfg  intra_fast.cfg  intra_faster.cfg  intra_medium.cfg  intra_slow.cfg  intra_slower.cfg  lowdelay_P_fast.cfg  lowdelay_P_vtm.cfg  lowdelay_slower.cfg  qpa.cfg  randomaccess_fast.cfg  randomaccess_faster.cfg  randomaccess_medium.cfg  randomaccess_medium_gop16.cfg  randomaccess_medium_lowDecEnergy.cfg  randomaccess_slow.cfg  randomaccess_slower.cfg  randomaccess_tooltest.cfg  rc1p.cfg  rc2p.cfg  sequence.cfg
cfg/experimental/: gdr.cfg  lowdelay_fast.cfg  lowdelay_faster.cfg  lowdelay_medium.cfg  lowdelay_slow.cfg  lowdelay_slower.cfg
cmake/install/: VVEncConfig.cmake  VVEncConfigVersion.cmake.in  vvencConfig.cmake  vvencConfigVersion.cmake.in
cmake/modules/: VVEncLibInstall.cmake  VVEncNumCores.cmake  vvencCompilerSupport.cmake  vvencInstall.cmake  vvencTests.cmake
cmake/toolchains/: aarch64-linux-gnu-gcc-ubuntu2204.cmake  i686-w64-mingw32-gcc-posix-ubuntu1604.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu1604.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu1804.cmake  x86_64-w64-mingw32-gcc-posix-ubuntu2004.cmake
include/apputils/: EncAppCfg.h  IStreamIO.h  Options.h  ParseArg.h  ParseArg.inl  VVEncAppCfg.h  YuvFileIO.h  apputilsDecl.h
include/vvenc/: Basics.h  EncCfg.h  EncCfgExpert.h  EncoderIf.h  FileIO.h  Nal.h  ParcatSegmentFilter.h  version.h  vvenConfig.h  vvenc.h  vvenc.h.in  vvencCfg.h  vvencCfgExpert.h  vvencConfig.h  vvencDecl.h
pkgconfig/: libvvenc.pc.in
source/App/vvencFFapp/: CMakeLists.txt  EncApp.cpp  EncApp.h  EncAppCfg.cpp  EncAppCfg.h  ParseArg.cpp  ParseArg.h  encmain.cpp  resource.h  resource_version.h  vvencFFapp.rc
source/App/vvencapp/: BinFileWriter.h  CMakeLists.txt  CmdLineParser.h  YuvFileReader.h  readme.md  resource.h  vvencapp.cpp  vvencapp.rc  vvencappCfg.cpp  vvencappCfg.h
source/App/vvencsample/: CMakeLists.txt  resource.h  vvencsample.c  vvencsample.rc
source/Lib/CommonLib/: AdaptiveLoopFilter.cpp  AdaptiveLoopFilter.h  AffineGradientSearch.cpp  AffineGradientSearch.h  AlfParameters.h  BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  CodingStructure.cpp  CodingStructure.h  Common.h  CommonDef.h  ContextModelling.cpp  ContextModelling.h  Contexts.cpp  Contexts.h  DepQuant.cpp  DepQuant.h  DepQuantSimd.cpp  DepQuantSimd.h  HRD.h  InterPrediction.cpp  InterPrediction.h  InterpolationFilter.cpp  InterpolationFilter.h  IntraPrediction.cpp  IntraPrediction.h  LoopFilter.cpp  LoopFilter.h  MCTF.cpp  MCTF.h  MD5.h  MatrixIntraPrediction.cpp  MatrixIntraPrediction.h  MipData.h  MotionInfo.h  Mv.cpp  Mv.h  Nal.h  (+47 more)
source/Lib/CommonLib/arm/: BufferARM.h  CommonDefARM.cpp  CommonDefARM.h  InitARM.cpp  InterPredARM.h  InterpolationFilterARM.h  InterpolationFilter_neon.h  MCTF_neon.h  RdCostARM.h  mem_neon.h
source/Lib/CommonLib/arm/neon/: AdaptiveLoopFilter_neon.cpp  AffineGradientSearch_neon.cpp  Buffer_neon.cpp  DepQuant_neon.cpp  FGA_neon.cpp  InterPredARM.cpp  InterPred_neon.cpp  InterpolationFilter_neon.cpp  IntraPred_neon.cpp  LoopFilter_neon.cpp  MCTF_neon.cpp  RdCost_neon.cpp  RdCost_neon.h  SampleAdaptiveOffset_neon.cpp  Trafo_neon.cpp  (+5 more)
source/Lib/CommonLib/x86/: AdaptiveLoopFilterX86.h  AffineGradientSearchX86.h  BufferX86.h  CommonDefX86.cpp  CommonDefX86.h  DepQuantX86.h  FGAX86.h  FixMissingIntrin.h  InitX86.cpp  InterPredX86.h  InterpolationFilterX86.h  IntraPredX86.h  LoopFilterX86.h  MCTFX86.h  QuantX86.h  RdCostX86.h  SampleAdaptiveOffsetX86.h  TrafoX86.h
source/Lib/DecoderLib/: AnnexBread.cpp  AnnexBread.h  BinDecoder.cpp  BinDecoder.h  CABACReader.cpp  CABACReader.h  DecCu.cpp  DecCu.h  DecLib.cpp  DecLib.h  DecSlice.cpp  DecSlice.h  NALread.cpp  NALread.h  SEIread.cpp  SEIread.h  VLCReader.cpp  VLCReader.h
source/Lib/EncoderLib/: Analyze.h  BinEncoder.cpp  BinEncoder.h  BitAllocation.cpp  BitAllocation.h  CABACWriter.cpp  CABACWriter.h  EncAdaptiveLoopFilter.cpp  EncAdaptiveLoopFilter.h  EncCfg.cpp  EncCfg.h  EncCu.cpp  EncCu.h  EncGOP.cpp  EncGOP.h  EncHRD.cpp  EncHRD.h  EncLib.cpp  EncLib.h  EncModeCtrl.cpp  EncModeCtrl.h  EncPicture.cpp  EncPicture.h  EncReshape.cpp  EncReshape.h  EncSampleAdaptiveOffset.cpp  EncSampleAdaptiveOffset.h  EncSlice.cpp  EncSlice.h  EncStage.h  GOPCfg.cpp  GOPCfg.h  InterSearch.cpp  InterSearch.h  IntraSearch.cpp  IntraSearch.h  LegacyRateCtrl.cpp  LegacyRateCtrl.h  NALwrite.cpp  NALwrite.h  (+12 more)
source/Lib/EncoderLib/x86/: EncAdaptiveLoopFilterX86.h
source/Lib/Utilities/: Logger.h  MsgLog.h  NoMallocThreadPool.cpp  NoMallocThreadPool.h
source/Lib/apputils/: BitstreamHelper.h  CMakeLists.txt  EncAppCfg.cpp  FileIOHelper.h  IStreamIO.h  LogoOverlay.h  LogoRenderer.h  MsgLog.h  ParseArg.cpp  ParseArg.h  Stats.h  VVEncAppCfg.cpp  VVEncAppCfg.h  YuvFileIO.cpp  YuvFileIO.h  apputils.rc  resource.h  resource_version.h  version.h.in
source/Lib/libmd5/: MD5.h  libmd5.cpp  libmd5.h
source/Lib/vvenc/: CMakeLists.txt  EncCfg.cpp  EncoderIf.cpp  FileIO.cpp  resource.h  resource_version.h  version-rc.h.in  version.h.in  vvenc.cpp  vvenc.rc  vvencCfg.cpp  vvencCfgExpert.cpp  vvencConfig.cpp  vvencimpl.cpp  vvencimpl.h
source/Test/: RTn23.cfg  bus_64x64.yuv  testSeq.cfg
source/Test/vvenclibtest/: resource.h  resource_version.h  vvenclibtest.cpp  vvenclibtest.rc
source/VisualStudio/: common.natvis  static_vector.natvis
test/data/: RTn23.cfg  RTn23_80x44p15_f15.yuv
test/vvenc_unit_test/: CMakeLists.txt  resource.h  resource_version.h  vvenc_unit_test.cpp  vvenc_unit_test.rc
test/vvencdtstest/: CMakeLists.txt  vvencdtstest.c  vvencdtstest.rc
test/vvencinterfacetest/: CMakeLists.txt  resource.h  resource_version.h  vvencinterfacetest.c  vvencinterfacetest.rc
test/vvenclibtest/: CMakeLists.txt  resource.h  vvenclibtest.cpp  vvenclibtest.rc
(+58 files in other folders)
